# GameOfLife

./: CMakeLists.txt  Readme.md
include/: cell.h  game_of_life.h  world.h  world_hasher.h
include/drawer/: world_console_drawer.h  world_drawer.h  world_drawer_factory.h
include/initial_figures/: initial_figure.h
include/rules/: conway_rules.h  rules.h  rules_factory.h
src/: CMakeLists.txt  cell.cpp  game_of_life.cpp  main.cpp  world.cpp  world_hasher.cpp
src/drawer/: world_console_drawer.cpp  world_drawer_factory.cpp
src/initial_figures/: initial_figure.cpp
src/rules/: conway_rules.cpp  rules_factory.cpp
test/: CMakeLists.txt  cell_test.cpp  conway_rules_test.cpp  game_of_life_test.cpp  world_test.cpp
